Fixed Small Bug and mentee problem

--- a/views/admin/home.ejs
+++ b/views/admin/home.ejs
@@ -168,10 +168,10 @@
                                 <div class="row no-gutters align-items-center">
                                     <div class="col mr-2">
                                         <div class="font-weight-bold text-primary text-uppercase mb-1 h5">
-                                            <a href="#">John Doe</a>
+                                            <a href="#"><%=admin.mentee[0].mentee_name%></a>
                                         </div>
 
-                                        <div class="mb-0 font-weight-bold text-gray-800 text-xs">Average Score: 90%
+                                        <div class="mb-0 font-weight-bold text-gray-800 text-xs"><%=admin.mentee[0].mentee_avg%>
                                         </div>
                                     </div>
                                     <div class="col-auto">
@@ -190,9 +190,9 @@
                                 <div class="row no-gutters align-items-center">
                                     <div class="col mr-2">
                                         <div class="h5 font-weight-bold text-success text-uppercase mb-1">
-                                            <a href="#">John Doe</a>
+                                            <a href="#"><%=admin.mentee[1].mentee_name%></a>
                                         </div>
-                                        <div class="mb-0 font-weight-bold text-gray-800 text-xs ">Average Score: 90%
+                                        <div class="mb-0 font-weight-bold text-gray-800 text-xs "><%=admin.mentee[1].mentee_avg%>
                                         </div>
                                     </div>
                                     <div class="col-auto">
@@ -211,9 +211,9 @@
                                 <div class="row no-gutters align-items-center">
                                     <div class="col mr-2">
                                         <div class="h5 font-weight-bold text-success text-uppercase mb-1">
-                                            <a href="#">John Doe</a>
+                                            <a href="#"><%=admin.mentee[2].mentee_name%></a>
                                         </div>
-                                        <div class="text-xs mb-0 font-weight-bold text-gray-800">Average Score: 90%
+                                        <div class="text-xs mb-0 font-weight-bold text-gray-800"><%=admin.mentee[2].mentee_avg%>
                                         </div>
                                     </div>
                                     <div class="col-auto">
