--- a/views/admin/addFeed.ejs
+++ b/views/admin/addFeed.ejs
@@ -25,9 +25,25 @@
         <hr class="sidebar-divider my-0">
 
         <li class="nav-item active">
-            <a class="nav-link" href="/mentorHome">
-                <i class="fas fa-fw fa-tachometer-alt"></i>
-                <span>Dashboard</span></a>
+            <% if(user.is_admin===1){
+                %>
+                    <a class="nav-link" href="/admin/home">
+                        <i class="fas fa-fw fa-tachometer-alt"></i>
+                        <span>Dashboard</span></a><%
+                }
+                else if(user.is_Mentor===1){
+                        %><a class="nav-link" href="/mentorHome">
+                            <i class="fas fa-fw fa-tachometer-alt"></i>
+                            <span>Dashboard</span></a><%
+                }
+                else{
+                            %>
+                    <a class="nav-link" href="/home">
+                        <i class="fas fa-fw fa-tachometer-alt"></i>
+                        <span>Dashboard</span></a><%
+                }
+                    
+                %>
         </li>
 
         <hr class="sidebar-divider d-none d-md-block">
