--- a/views/admin/home.ejs
+++ b/views/admin/home.ejs
@@ -1,6 +1,41 @@
 
 <%- include('../layouts/header.ejs')%>
 
+<!-- <h1>Welcome Admin</h1>
+
+<a href="/admin/logout">Logout</a> -->
+<!-- 
+
+<%- include('../layouts/header.ejs')%>
+
+<h1>Welcome, <%= admin.name %></h1>
+<a href = "/admin/dashboard">Dashboard</a><br><br>
+
+
+
+
+<table style="width:50%;">
+    <tr>
+        <td><img src="/userImages/<%=  admin.image %>" height="200px" width="200px" alt="<%= admin.image %>"></td>
+        
+    </tr>
+    <tr>
+        <td>Email</td>
+        <td><%= admin.email %></td>
+    </tr>
+    <tr>
+        <td>Mobile</td>
+        <td><%= admin.mobile %></td>
+    </tr>
+    
+</table>
+
+<a href="/edit?id=<%= admin._id%>">Edit</a><br>
+
+<a href="/logout">Logout</a>
+
+<% include("../layouts/footer.ejs") %> -->
+
 
 <div id="wrapper">
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
@@ -74,51 +109,58 @@
 
         <hr class="sidebar-divider d-none d-md-block">
 
+        <!--     
+    <div class="text-center d-none d-md-inline">
+        <button class="rounded-circle border-0" id="sidebarToggle"></button>
+    </div> -->
+
     </ul>
-    <div class="d-flex flex-column w-100">
-        <div id="content-wrapper" class="d-flex flex-column h-100">
 
-            <div id="content">
+    <div id="content-wrapper" class="d-flex flex-column">
 
-                <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+        <div id="content">
 
-                    <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
-                        <i class="fa fa-bars"></i>
-                    </button>
-                    <h1>Welcome, Admin</h1>
+            <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
 
-                    <ul class="navbar-nav ml-auto">
+                <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
+                    <i class="fa fa-bars"></i>
+                </button>
+                <h1>Welcome, Admin</h1>
 
-                        <div class="topbar-divider d-none d-sm-block"></div>
+                <ul class="navbar-nav ml-auto">
 
-                        <li class="nav-item dropdown no-arrow">
-                            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">
-                                    <%= admin.name %>
-                                </span>
-                                <img src="userImages/<%= admin.image%>" alt="user-image"
-                                    class="img-profile rounded-circle">
+                    <div class="topbar-divider d-none d-sm-block"></div>
+
+                    <li class="nav-item dropdown no-arrow">
+                        <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span class="mr-2 d-none d-lg-inline text-gray-600 small">
+                                <%= admin.name %>
+                            </span>
+                            <img src="userImages/<%= admin.image%>" alt="user-image"
+                                class="img-profile rounded-circle">
+                        </a>
+
+                        <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
+                            aria-labelledby="userDropdown">
+                            <a class="dropdown-item" href="/logout" data-toggle="modal" data-target="#logoutModal">
+                                <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                                Logout
                             </a>
+                        </div>
+                    </li>
 
-                            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
-                                aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="/logout" data-toggle="modal" data-target="#logoutModal">
-                                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Logout
-                                </a>
-                            </div>
-                        </li>
+                </ul>
 
-                    </ul>
+            </nav>
 
-                </nav>
+            <div class="container-fluid">
 
-                <div class="container-fluid">
+                <div class="d-sm-flex align-items-center justify-content-between mb-4">
+                    <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
+                </div>
 
-                    <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
-                    </div>
+                <div class="row">
 
                     <div class="col-xl-3 col-md-6 mb-4">
                         <div class="card border-left-primary shadow h-100 py-2">
@@ -132,9 +174,11 @@
                                         <div class="mb-0 font-weight-bold text-gray-800 text-xs"><%=admin.mentee[0].mentee_avg%>
                                         </div>
                                     </div>
+                                    
                                 </div>
                             </div>
                         </div>
+                    </div>
 
                     <div class="col-xl-3 col-md-6 mb-4">
                         <div class="card border-left-success shadow h-100 py-2">
@@ -147,9 +191,11 @@
                                         <div class="mb-0 font-weight-bold text-gray-800 text-xs "><%=admin.mentee[1].mentee_avg%>
                                         </div>
                                     </div>
+                                    
                                 </div>
                             </div>
                         </div>
+                    </div>
 
                     <div class="col-xl-3 col-md-6 mb-4">
                         <div class="card border-left-info shadow h-100 py-2">
@@ -162,42 +208,66 @@
                                         <div class="text-xs mb-0 font-weight-bold text-gray-800"><%=admin.mentee[2].mentee_avg%>
                                         </div>
                                     </div>
+                                    
                                 </div>
                             </div>
                         </div>
                     </div>
+                </div>
 
-                    <div class="row">
-                        <div class="col-xl-8 col-lg-7">
-                            <div class="card shadow mb-4">
-                                <div
-                                    class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-primary">Uploaded Videos</h6>
-                                </div>
-                                <div class="card-body">
-                                    <% 
-                                        var videoArr = []; 
-                                        <!-- console.log(videoArr.length); -->
-                                        if(videoArr.length===0){ 
-                                            %>
-                                                <div class="mb-3">No Uploaded Videos</div>
-                                                <a href="/admin/add-video"><span class="me-1">Upload Video</span><i class="fa fa-plus"></i></a>
-                                                
-                                            <% } 
-                                        else{ 
-                                            %><div>Uploaded video: <% videoArr.length %></div><% } %>
-                                </div>
+                <div class="row">
+                    <div class="col-xl-12 col-lg-12">
+                        <div class="card shadow mb-4">
+                            <!-- Card Header - Dropdown -->
+                            <div
+                                class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                                <h6 class="m-0 font-weight-bold text-primary">Uploaded Videos</h6>
+                            </div>
+                            <!-- Card Body -->
+                            <div class="card-body">
+                                <div class="row">
+                                <% 
+                                    <!-- console.log(videoArr.length); -->
+                                    if(videoArr.length>0){ 
+                                        for(let i=0;i<videoArr.length;i++){
+                                        %><div class="col-xl-3 col-md-6 mb-4">
+                                            <div class="card border-left-primary shadow h-100 py-2">
+                                                <div class="card-body">
+                                                    <div class="row no-gutters align-items-center">
+                                                        <div class="col mr-2">
+                                                            <div class="font-weight-bold text-primary text-uppercase mb-1 h5">
+                                                                <span ><%=videoArr[i].tittle%></span>
+                                                                
+                                                                <video class="mt-3" width="240" height="240" controls>
+                                                                    <source src="/userVideo/<%= videoArr[i].video %>" type="video/mp4">
+                                                                    Your browser does not support the video tag.
+                                                                </video>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div><%
+                                        }
+                                        %>
+                                            
+                                            
+                                        <% } 
+                                    else{ 
+                                        %><div class="mb-3">No Uploaded Videos</div>
+                                        <a href="/admin/add-video"><span class="me-1">Upload Video</span><i class="fa fa-plus"></i></a><% } %>
+                                    </div>
                             </div>
                         </div>
                     </div>
-
                 </div>
 
             </div>
 
         </div>
-        <%- include('../layouts/footer.ejs')%>
+
     </div>
+
 </div>
 
 <!-- Logout Modal-->
@@ -220,4 +290,6 @@
     </div>
 </div>
 
+<!-- <a href="/edit?id=<%= admin._id%>">Edit</a><br> -->
 
+<%- include('../layouts/footer.ejs')%>
