--- a/views/admin/searchVideo.ejs
+++ b/views/admin/searchVideo.ejs
@@ -130,9 +130,9 @@
                                         <div class="row no-gutters align-items-center">
                                             <div class="col mr-2">
                                                 <div class="font-weight-bold text-primary text-uppercase mb-1 h5">
-                                                    <span class="mb-5"><%=videoArr[i].tittle%></span>
+                                                    <span ><%=videoArr[i].tittle%></span>
                                                     
-                                                    <video width="240" height="240" controls>
+                                                    <video class="mt-3" width="240" height="240" controls>
                                                         <source src="/userVideo/<%= videoArr[i].video %>" type="video/mp4">
                                                         Your browser does not support the video tag.
                                                     </video>
