--- a/views/admin/home.ejs
+++ b/views/admin/home.ejs
@@ -82,7 +82,6 @@
                 <span>Schedule</span>
             </a>
         </li>
-
         <li class="nav-item">
             <a class="nav-link" href="/findTrainee">
                 <i class="fas fa-fw fa-user"></i>
@@ -160,74 +159,79 @@
                     <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
                 </div>
 
-                <div class="row">
+                <div class="card shadow mb-4">
+                    <div class="card-header py-3">
+                        <h6 class="m-0 font-weight-bold text-primary">Mentees Assigned</h6>
+                    </div>
+                    <div class="card-body">
+                        <div class="row">
 
-                    <div class="col-xl-3 col-md-6 mb-4">
-                        <div class="card border-left-primary shadow h-100 py-2">
-                            <div class="card-body">
-                                <div class="row no-gutters align-items-center">
-                                    <div class="col mr-2">
-                                        <div class="font-weight-bold text-primary text-uppercase mb-1 h5">
-                                            <a href="#"><%=admin.mentee[0].mentee_name%></a>
-                                        </div>
-
-                                        <div class="mb-0 font-weight-bold text-gray-800 text-xs"><%=admin.mentee[0].mentee_avg%>
+                            <div class="col-xl-3 col-md-6 mb-4">
+                                <div class="card border-left-primary shadow h-100 py-2">
+                                    <div class="card-body">
+                                        <div class="row no-gutters align-items-center">
+                                            <div class="col mr-2">
+                                                <div class="font-weight-bold text-primary text-uppercase mb-1 h5">
+                                                    <a href="#"><%=admin.mentee[0].mentee_name%></a>
+                                                </div>
+        
+                                                <div class="mb-0 font-weight-bold text-gray-800 text-xs"><%=admin.mentee[0].mentee_avg%>
+                                                </div>
+                                            </div>
+                                            
                                         </div>
                                     </div>
-                                    
                                 </div>
                             </div>
-                        </div>
-                    </div>
-
-                    <div class="col-xl-3 col-md-6 mb-4">
-                        <div class="card border-left-success shadow h-100 py-2">
-                            <div class="card-body">
-                                <div class="row no-gutters align-items-center">
-                                    <div class="col mr-2">
-                                        <div class="h5 font-weight-bold text-success text-uppercase mb-1">
-                                            <a href="#"><%=admin.mentee[1].mentee_name%></a>
-                                        </div>
-                                        <div class="mb-0 font-weight-bold text-gray-800 text-xs "><%=admin.mentee[1].mentee_avg%>
+        
+                            <div class="col-xl-3 col-md-6 mb-4">
+                                <div class="card border-left-success shadow h-100 py-2">
+                                    <div class="card-body">
+                                        <div class="row no-gutters align-items-center">
+                                            <div class="col mr-2">
+                                                <div class="h5 font-weight-bold text-success text-uppercase mb-1">
+                                                    <a href="#"><%=admin.mentee[1].mentee_name%></a>
+                                                </div>
+                                                <div class="mb-0 font-weight-bold text-gray-800 text-xs "><%=admin.mentee[1].mentee_avg%>
+                                                </div>
+                                            </div>
+                                            
                                         </div>
                                     </div>
-                                    
                                 </div>
                             </div>
-                        </div>
-                    </div>
-
-                    <div class="col-xl-3 col-md-6 mb-4">
-                        <div class="card border-left-info shadow h-100 py-2">
-                            <div class="card-body">
-                                <div class="row no-gutters align-items-center">
-                                    <div class="col mr-2">
-                                        <div class="h5 font-weight-bold text-success text-uppercase mb-1">
-                                            <a href="#"><%=admin.mentee[2].mentee_name%></a>
-                                        </div>
-                                        <div class="text-xs mb-0 font-weight-bold text-gray-800"><%=admin.mentee[2].mentee_avg%>
+        
+                            <div class="col-xl-3 col-md-6 mb-4">
+                                <div class="card border-left-info shadow h-100 py-2">
+                                    <div class="card-body">
+                                        <div class="row no-gutters align-items-center">
+                                            <div class="col mr-2">
+                                                <div class="h5 font-weight-bold text-success text-uppercase mb-1">
+                                                    <a href="#"><%=admin.mentee[2].mentee_name%></a>
+                                                </div>
+                                                <div class="text-xs mb-0 font-weight-bold text-gray-800"><%=admin.mentee[2].mentee_avg%>
+                                                </div>
+                                            </div>
+                                            
                                         </div>
                                     </div>
-                                    
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="row">
+                
+                <!-- <div class="row">
                     <div class="col-xl-12 col-lg-12">
                         <div class="card shadow mb-4">
-                            <!-- Card Header - Dropdown -->
                             <div
                                 class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                                 <h6 class="m-0 font-weight-bold text-primary">Uploaded Videos</h6>
                             </div>
-                            <!-- Card Body -->
                             <div class="card-body">
                                 <div class="row">
                                 <% 
-                                    <!-- console.log(videoArr.length); -->
                                     if(videoArr.length>0){ 
                                         for(let i=0;i<videoArr.length;i++){
                                         %><div class="col-xl-3 col-md-6 mb-4">
@@ -260,7 +264,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>  -->
 
             </div>
 
