--- a/views/users/mentorHome.ejs
+++ b/views/users/mentorHome.ejs
@@ -97,50 +97,57 @@
                         <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
                     </div>
     
-                    <div class="row">
-    
-                        <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card border-left-primary shadow h-100 py-2">
-                                <div class="card-body">
-                                    <div class="row no-gutters align-items-center">
-                                        <div class="col mr-2">
-                                            <div class="font-weight-bold text-primary text-uppercase mb-1 h5">
-                                                <a href="#"><%=user.mentee[0].mentee_name%></a>
-                                            </div>
-
-                                            <div class="mb-0 font-weight-bold text-gray-800 text-xs"><%=user.mentee[0].mentee_avg%>
+                    <div class="card shadow mb-4">
+                        <div class="card-header py-3">
+                            <h6 class="m-0 font-weight-bold text-primary">Mentees Assigned</h6>
+                        </div>
+                        <div class="card-body">
+                            <div class="row">
+            
+                                <div class="col-xl-3 col-md-6 mb-4">
+                                    <div class="card border-left-primary shadow h-100 py-2">
+                                        <div class="card-body">
+                                            <div class="row no-gutters align-items-center">
+                                                <div class="col mr-2">
+                                                    <div class="font-weight-bold text-primary text-uppercase mb-1 h5">
+                                                        <a href="#"><%=user.mentee[0].mentee_name%></a>
+                                                    </div>
+        
+                                                    <div class="mb-0 font-weight-bold text-gray-800 text-xs"><%=user.mentee[0].mentee_avg%>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-    
-                        <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card border-left-success shadow h-100 py-2">
-                                <div class="card-body">
-                                    <div class="row no-gutters align-items-center">
-                                        <div class="col mr-2">
-                                            <div class="h5 font-weight-bold text-success text-uppercase mb-1">
-                                                <a href="#"><%=user.mentee[1].mentee_name%></a>
-                                            </div>
-                                            <div class="mb-0 font-weight-bold text-gray-800 text-xs "><%=user.mentee[1].mentee_avg%>
+            
+                                <div class="col-xl-3 col-md-6 mb-4">
+                                    <div class="card border-left-success shadow h-100 py-2">
+                                        <div class="card-body">
+                                            <div class="row no-gutters align-items-center">
+                                                <div class="col mr-2">
+                                                    <div class="h5 font-weight-bold text-success text-uppercase mb-1">
+                                                        <a href="#"><%=user.mentee[1].mentee_name%></a>
+                                                    </div>
+                                                    <div class="mb-0 font-weight-bold text-gray-800 text-xs "><%=user.mentee[1].mentee_avg%>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-    
-                        <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card border-left-info shadow h-100 py-2">
-                                <div class="card-body">
-                                    <div class="row no-gutters align-items-center">
-                                        <div class="col mr-2">
-                                            <div class="h5 font-weight-bold text-success text-uppercase mb-1">
-                                                <a href="#"><%=user.mentee[2].mentee_name%></a>
-                                            </div>
-                                            <div class="text-xs mb-0 font-weight-bold text-gray-800"><%=user.mentee[2].mentee_avg%>
+            
+                                <div class="col-xl-3 col-md-6 mb-4">
+                                    <div class="card border-left-info shadow h-100 py-2">
+                                        <div class="card-body">
+                                            <div class="row no-gutters align-items-center">
+                                                <div class="col mr-2">
+                                                    <div class="h5 font-weight-bold text-success text-uppercase mb-1">
+                                                        <a href="#"><%=user.mentee[2].mentee_name%></a>
+                                                    </div>
+                                                    <div class="text-xs mb-0 font-weight-bold text-gray-800"><%=user.mentee[2].mentee_avg%>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -148,8 +155,9 @@
                             </div>
                         </div>
                     </div>
+                   
     
-                    <div class="row">
+                    <!-- <div class="row">
                         <div class="col-xl-8 col-lg-7">
                             <div class="card shadow mb-4">
                                 <div
@@ -170,7 +178,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
     
                 </div>
     
