schedule interview updated

--- a/views/admin/addFeed.ejs
+++ b/views/admin/addFeed.ejs
@@ -40,14 +40,14 @@
 
             <div id="content">
     
-                <div class="container-fluid mt-5">
+                <div class="container-fluid mt-5 w-75">
     
                     <div class="card shadow mb-4">
                         <div class="card-header py-3">
                             <h6 class="m-0 font-weight-bold text-primary">Add Feedback</h6>
                         </div>
                         <div class="card-body">
-                            <form class="user" action="" method="POST" style="width: 75%;">
+                            <form class="user" action="" method="POST">
                                 <div class="form-group">
                                     <input type="text" class="form-control form-control-user"
                                         id="exampleInputTopic" aria-describedby="topic" "
