--- a/views/admin/new-user.ejs
+++ b/views/admin/new-user.ejs
@@ -64,7 +64,10 @@
                                     <label class="form-check-label" for="inlineRadio2">Trainee</label>
                                 </div>
                             </div>
-                            
+                            <div class="form-group">
+                                <input type="text" name = "yoj" class="form-control form-control-user" id="exampleInputYoj"
+                                    placeholder="Year Of Joining" required>
+                            </div>
                             <input type="file" class="mb-3" id="exampleInputFile"
                                     placeholder="Profile Photo" name = "image" required>
                             <input type = "submit" value="Create" class="btn btn-primary btn-user btn-blockr" style="width: 100%;">
