--- a/views/admin/scheduledInterview.ejs
+++ b/views/admin/scheduledInterview.ejs
@@ -5,7 +5,7 @@
 <div id="wrapper">
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
-        <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/mentorHome">
+        <a class="sidebar-brand d-flex align-items-center justify-content-center" href="#">
             <div class="sidebar-brand-text mx-3">To The New</div>
         </a>
 
@@ -32,7 +32,6 @@
                     
                         %>
         </li>
-
 
         <hr class="sidebar-divider d-none d-md-block">
 
