Added all the things

--- a/views/admin/searchVideo.ejs
+++ b/views/admin/searchVideo.ejs
@@ -32,7 +32,7 @@
         </ul>
 
         <div class="d-flex flex-column w-100">
-            <div id="content-wrapper" class="d-flex flex-column">
+            <div id="content-wrapper" class="d-flex flex-column h-100">
 
                 <div id="content">
                     <div class="container-fluid">
@@ -101,5 +101,3 @@
             </div>
         </div>
     </div>
-
-    <% include('../layouts/footer.ejs')%>
