--- a/views/users/mentorHome.ejs
+++ b/views/users/mentorHome.ejs
@@ -113,7 +113,7 @@
                                                         <a href="#"><%=user.mentee[0].mentee_name%></a>
                                                     </div>
         
-                                                    <div class="mb-0 font-weight-bold text-gray-800 text-xs"><%=user.mentee[0].mentee_avg%>
+                                                    <div class="mb-0 font-weight-bold text-gray-800 text-xs">Average Score: <%=user.mentee[0].mentee_avg%>
                                                     </div>
                                                 </div>
                                             </div>
@@ -129,7 +129,7 @@
                                                     <div class="h5 font-weight-bold text-success text-uppercase mb-1">
                                                         <a href="#"><%=user.mentee[1].mentee_name%></a>
                                                     </div>
-                                                    <div class="mb-0 font-weight-bold text-gray-800 text-xs "><%=user.mentee[1].mentee_avg%>
+                                                    <div class="mb-0 font-weight-bold text-gray-800 text-xs ">Average Score: <%=user.mentee[1].mentee_avg%>
                                                     </div>
                                                 </div>
                                             </div>
@@ -145,7 +145,7 @@
                                                     <div class="h5 font-weight-bold text-success text-uppercase mb-1">
                                                         <a href="#"><%=user.mentee[2].mentee_name%></a>
                                                     </div>
-                                                    <div class="text-xs mb-0 font-weight-bold text-gray-800"><%=user.mentee[2].mentee_avg%>
+                                                    <div class="text-xs mb-0 font-weight-bold text-gray-800">Average Score: <%=user.mentee[2].mentee_avg%>
                                                     </div>
                                                 </div>
                                             </div>
