--- a/views/admin/addFeed.ejs
+++ b/views/admin/addFeed.ejs
@@ -57,6 +57,7 @@
                                     <input type="text" class="form-control form-control-user"
                                         id="exampleInputDesc" placeholder="Enter Feedback..." required name="desc">
                                 </div>
+                                <input type="hidden" name="id" value="<%= users._id%>">
                                 <div class="form-group">
                                     <input type="number" class="form-control form-control-user"
                                         id="exampleInputMarks" placeholder="Enter Marks..." required name="marks">
@@ -74,6 +75,4 @@
         </div>
         <%- include('../layouts/footer.ejs')%>
     </div>
-    
-
 </div>
