--- a/views/admin/home.ejs
+++ b/views/admin/home.ejs
@@ -136,7 +136,7 @@
                                                         <a href="#"><%=admin.mentee[0].mentee_name%></a>
                                                     </div>
             
-                                                    <div class="mb-0 font-weight-bold text-gray-800 text-xs"><%=admin.mentee[0].mentee_avg%>
+                                                    <div class="mb-0 font-weight-bold text-gray-800 text-xs">Average Score: <%=admin.mentee[0].mentee_avg%>
                                                     </div>
                                                 </div>
                                                 
@@ -153,7 +153,7 @@
                                                     <div class="h5 font-weight-bold text-success text-uppercase mb-1">
                                                         <a href="#"><%=admin.mentee[1].mentee_name%></a>
                                                     </div>
-                                                    <div class="mb-0 font-weight-bold text-gray-800 text-xs "><%=admin.mentee[1].mentee_avg%>
+                                                    <div class="mb-0 font-weight-bold text-gray-800 text-xs ">Average Score: <%=admin.mentee[1].mentee_avg%>
                                                     </div>
                                                 </div>
                                                 
@@ -170,7 +170,7 @@
                                                     <div class="h5 font-weight-bold text-success text-uppercase mb-1">
                                                         <a href="#"><%=admin.mentee[2].mentee_name%></a>
                                                     </div>
-                                                    <div class="text-xs mb-0 font-weight-bold text-gray-800"><%=admin.mentee[2].mentee_avg%>
+                                                    <div class="text-xs mb-0 font-weight-bold text-gray-800">Average Score: <%=admin.mentee[2].mentee_avg%>
                                                     </div>
                                                 </div>
                                                 
@@ -183,50 +183,7 @@
                     </div>
 
                     
-                    <!-- <div class="row">
-                        <div class="col-xl-12 col-lg-12">
-                            <div class="card shadow mb-4">
-                                <div
-                                    class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-primary">Uploaded Videos</h6>
-                                </div>
-                                <div class="card-body">
-                                    <div class="row">
-                                    <% 
-                                        if(videoArr.length>0){ 
-                                            for(let i=0;i<videoArr.length;i++){
-                                            %><div class="col-xl-3 col-md-6 mb-4">
-                                                <div class="card border-left-primary shadow h-100 py-2">
-                                                    <div class="card-body">
-                                                        <div class="row no-gutters align-items-center">
-                                                            <div class="col mr-2">
-                                                                <div class="font-weight-bold text-primary text-uppercase mb-1 h5">
-                                                                    <span ><%=videoArr[i].tittle%></span>
-                                                                    
-                                                                    <video class="mt-3" width="240" height="240" controls>
-                                                                        <source src="/userVideo/<%= videoArr[i].video %>" type="video/mp4">
-                                                                        Your browser does not support the video tag.
-                                                                    </video>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div><%
-                                            }
-                                            %>
-                                                
-                                                
-                                            <% } 
-                                        else{ 
-                                            %><div class="mb-3">No Uploaded Videos</div>
-                                            <a href="/admin/add-video"><span class="me-1">Upload Video</span><i class="fa fa-plus"></i></a><% } %>
-                                        </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>  -->
-
+                   
                 </div>
 
             </div>
